--- a/package.json
+++ b/package.json
@@ -7,6 +7,8 @@
     "@testing-library/jest-dom": "5.14.1",
     "@testing-library/react": "12.0.0",
     "@testing-library/user-event": "13.2.1",
+    "@types/react": "^18.2.37",
+    "@types/react-dom": "^18.2.15",
     "antd": "4.18.7",
     "axios": "0.26.0",
     "classnames": "2.3.1",
@@ -16,7 +18,7 @@
     "react": "17.0.2",
     "react-dom": "17.0.2",
     "react-redux": "7.2.6",
-    "react-router-dom": "^6.17.0",
+    "react-router-dom": "5.3.0",
     "react-scripts": "5.0.0",
     "react-test-renderer": "17.0.2",
     "redux": "4.1.2",
@@ -55,8 +57,6 @@
   },
   "devDependencies": {
     "@types/node": "16.7.13",
-    "@types/react": "17.0.20",
-    "@types/react-dom": "17.0.9",
     "@types/react-redux": "7.1.22",
     "@types/react-router-dom": "5.3.3",
     "@types/react-test-renderer": "17.0.1",
